--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-handlebars": "^3.0.0",
+    "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
     "hbs": "~4.0.1",
